Corrected HTML 5 errors based on the W3.org Nu Html validator

--- a/afgui/fitter/templates/fitter/index.htm
+++ b/afgui/fitter/templates/fitter/index.htm
@@ -107,7 +107,7 @@
           <button class="btn btn-info loadExample" data-x-path="{{ example1 }}">Load Example 1</button>
           <button class="btn btn-info loadExample" data-x-path="{{ example2 }}">Load Example 2</button>
           <button class="btn btn-info loadExample" data-x-path="{{ example3 }}">Load Example 3</button>
-      </p><p>
+      </p>
         <form enctype="multipart/form-data">
             {% csrf_token %}
             <input id="fdata" name="fdata" type="file" class="btn btn-primary" style="display:inline-block;" />
@@ -117,7 +117,7 @@
             <!--button id="input_run" type="button" class="btn btn-success">Run</button -->
             <button id="input_clear" type="button" class="btn btn-danger">Clear</button>
         </form>
-      <br></p><p>
+      <br><p>
         <span id="input_message_user" class="hidden" role="alert"></span>
       </p>
       <p>
@@ -192,17 +192,17 @@
           <span id="fig3"></span>
           <svg id="arrow_to_results" style="position: absolute; left: 400px; top: 300px; display: none;">
               <defs id="defs4">
-                <marker style="overflow:visible;" id="Arrow2SendF" refX="0.0" refY="0.0" orient="auto" inkscape:stockid="Arrow2SendF">
+                <marker style="overflow:visible;" id="Arrow2SendF" refX="0.0" refY="0.0" orient="auto">
                     <path transform="scale(0.3) rotate(180) translate(-2.3,0)" d="M 8.7185878,4.0337352 L -2.2072895,0.016013256 L 8.7185884,-4.0017078 C 6.9730900,-1.6296469 6.9831476,1.6157441 8.7185878,4.0337352 z " style="stroke-linejoin:round;stroke:#800080;stroke-width:0.62500000;fill:#800080;fill-rule:evenodd" id="path4582"></path>
                 </marker>
               </defs>
-              <g id="layer1" inkscape:groupmode="layer" inkscape:label="Layer 1">
-                  <path inkscape:connector-curvature="0" id="path2985" d="m 130,49.505039 0,67.857141" style="stroke-linejoin:miter;marker-end:url(#Arrow2SendF);stroke-opacity:1;stroke:#800080;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-width:15;fill:#800080" />
-                  <text xml:space="preserve" style="font-size:32px;font-style:normal;font-variant:normal;font-weight:bold;font-stretch:normal;text-align:center;line-height:125%;letter-spacing:0px;word-spacing:0px;text-anchor:middle;fill:#800080;fill-opacity:1;stroke:none;font-family:Arial;-inkscape-font-specification:Sans Bold" id="text2991" sodipodi:linespacing="125%">
-                      <tspan sodipodi:role="line" x="215" y="17.505039" id="tspan2995" style="font-size:20px">Cleaning Results</tspan>
+              <g id="layer1">
+                  <path id="path2985" d="m 130,49.505039 0,67.857141" style="stroke-linejoin:miter;marker-end:url(#Arrow2SendF);stroke-opacity:1;stroke:#800080;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-width:15;fill:#800080" />
+                  <text xml:space="preserve" style="font-size:32px;font-style:normal;font-variant:normal;font-weight:bold;font-stretch:normal;text-align:center;line-height:125%;letter-spacing:0px;word-spacing:0px;text-anchor:middle;fill:#800080;fill-opacity:1;stroke:none;font-family:Arial;-inkscape-font-specification:Sans Bold" id="text2991">
+                      <tspan x="215" y="17.505039" id="tspan2995" style="font-size:20px">Cleaning Results</tspan>
                   </text>
-                  <text xml:space="preserve" style="font-size:32px;font-style:normal;font-variant:normal;font-weight:bold;font-stretch:normal;text-align:center;line-height:125%;letter-spacing:0px;word-spacing:0px;text-anchor:middle;fill:#800080;fill-opacity:1;stroke:none;font-family:Arial;-inkscape-font-specification:Sans Bold" id="text2992" sodipodi:linespacing="125%">
-                      <tspan sodipodi:role="line" x="215" y="40.505039" id="tspan2999" style="font-size:20px">Below</tspan>
+                  <text xml:space="preserve" style="font-size:32px;font-style:normal;font-variant:normal;font-weight:bold;font-stretch:normal;text-align:center;line-height:125%;letter-spacing:0px;word-spacing:0px;text-anchor:middle;fill:#800080;fill-opacity:1;stroke:none;font-family:Arial;-inkscape-font-specification:Sans Bold" id="text2992">
+                      <tspan x="215" y="40.505039" id="tspan2999" style="font-size:20px">Below</tspan>
                   </text>
               </g>
           </svg>
