Added cite tab to index.html

--- a/afgui/fitter/templates/fitter/index.htm
+++ b/afgui/fitter/templates/fitter/index.htm
@@ -56,6 +56,12 @@
             <li id="m_about" class="topnav_btn"><a class="clickable">About</a></li>
             <li id="m_contact" class="topnav_btn"><a class="clickable">Contact</a></li>
             <li class="dropdown">
+              <a class="clickable dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Cite Kfits<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="https://doi.org/10.1093/bioinformatics/btx577">DOI: 10.1093/bioinformatics/btx577</a></li>
+              </ul>
+            </li>
+            <li class="dropdown">
               <a class="clickable dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">External Links <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="https://github.com/odedrim/kfits#installation-instructions">Instructions for Installing Kfits Locally</a></li>
